--- a/SampleWeb/jenkinsfile
+++ b/SampleWeb/jenkinsfile
@@ -38,6 +38,15 @@ pipeline {
       }
     }
     
+    stage('Deploy') {
+      steps {
+        echo "Deploying to stage environment for more tests!";
+        bat "del *.zip"
+        zip zipFile: "SampleWeb.zip",
+        dir: "SampleWeb\\bin\\Debug\\netcoreapp3.1"
+      }
+    }
+    
     
 
     
