--- a/SampleWeb/jenkinsfile
+++ b/SampleWeb/jenkinsfile
@@ -43,7 +43,7 @@ pipeline {
         echo "Deploying to stage environment for more tests!";
         bat "del *.zip"
         zip zipFile: "SampleWeb.zip",
-        dir: "SampleWeb\\bin\\Debug\\netcoreapp3.1"
+        dir: "SampleWeb\\bin\\Debug\\netcoreapp3.1\\publish"
       }
     }
     
