--- a/SampleWeb/jenkinsfile
+++ b/SampleWeb/jenkinsfile
@@ -42,8 +42,7 @@ pipeline {
       steps {
         echo "Deploying to stage environment for more tests!";
         bat "del *.zip"
-        zip zipFile: "SampleWeb.zip",
-        dir: "SampleWeb\\bin\\Debug\\netcoreapp3.1\\publish"
+        zip "SampleWeb.zip" "SampleWeb\\bin\\Debug\\netcoreapp3.1\\publish"
       }
     }
     
