--- a/SampleWeb/jenkinsfile
+++ b/SampleWeb/jenkinsfile
@@ -42,7 +42,8 @@ pipeline {
       steps {
         echo "Deploying to stage environment for more tests!";
         bat "del *.zip";
-        zip "SampleWeb.zip" "SampleWeb\\bin\\Debug\\netcoreapp3.1\\publish"
+        #zip "SampleWeb.zip" "SampleWeb\\bin\\Debug\\netcoreapp3.1\\publish"
+        7z a -tzip {SampleWeb.zip} {SampleWeb\\bin\\Debug\\netcoreapp3.1\\publish}
       }
     }
     
