--- a/SampleWeb/jenkinsfile
+++ b/SampleWeb/jenkinsfile
@@ -41,11 +41,11 @@ pipeline {
     stage('Deploy') {
       steps {
         echo "Deploying to stage environment for more tests!";
-        bat "del *.zip";
+        bat "del *.zip"
         
         
-         zip zipFile: "SampleWeb.zip",
-        dir: "SampleWeb\\bin\\Debug\\netcoreapp3.1\\publish"
+         zip zipFile: 'SampleWeb.zip',archive: true,
+        dir: 'SampleWeb\\bin\\Debug\\netcoreapp3.1\\publish'
       }
     }
     
