--- a/SampleWeb/jenkinsfile
+++ b/SampleWeb/jenkinsfile
@@ -38,7 +38,7 @@ pipeline {
       }
     }
     
-    stage('Deploy') {
+    stage('Package') {
       steps {
         echo "Deploying to stage environment for more tests!";
         bat "del *.zip"
@@ -48,6 +48,16 @@ pipeline {
       }
     }
     
+    Stage ('Deploy')
+    {
+    steps{
+    
+    bat " "C:\Program Files (x86)\IIS\Microsoft Web Deploy V3\msdeploy.exe" 
+-verb:sync -source:IisApp='%WORKSPACE%\dotnetcorepipeline\SampleWeb\bin\Debug\netcoreapp3.1\publish' 
+-dest:iisapp='test',computerName='127.0.0.1/msdeploy.axd?site=test',
+authType='basic' , -enableRule:AppOffline"
+}
+}
     
 
     
