--- a/SampleWeb/jenkinsfile
+++ b/SampleWeb/jenkinsfile
@@ -53,7 +53,7 @@ pipeline {
     steps{
     
     bat """ 'C:\\Program Files (x86)\\IIS\\Microsoft Web Deploy V3\\msdeploy.exe'
--verb:sync -source:IisApp='%WORKSPACE%\dotnetcorepipeline\SampleWeb\bin\Debug\netcoreapp3.1\publish' 
+-verb:sync -source:IisApp='%WORKSPACE%\\dotnetcorepipeline\\SampleWeb\\bin\Debug\\netcoreapp3.1\\publish' 
 -dest:iisapp='test',computerName='127.0.0.1/msdeploy.axd?site=test',
 authType='basic' , -enableRule:AppOffline """
 }
