--- a/SampleWeb/jenkinsfile
+++ b/SampleWeb/jenkinsfile
@@ -52,7 +52,7 @@ pipeline {
     {
     steps{
     
-    bat """ 'cd C:\\Program Files (x86)\\IIS\\Microsoft Web Deploy V3\\msdeploy.exe'
+    bat """ cd 'C:\\Program Files (x86)\\IIS\\Microsoft Web Deploy V3\\msdeploy.exe'
 -verb:sync -source:IisApp='%WORKSPACE%\\SampleWeb\\bin\\Debug\\netcoreapp3.1\\publish' 
 -dest:iisapp='test',computerName='127.0.0.1/msdeploy.axd?site=test',
 authType='basic' , -enableRule:AppOffline """
