--- a/SampleWeb/jenkinsfile
+++ b/SampleWeb/jenkinsfile
@@ -51,8 +51,8 @@ pipeline {
     stage ('Deploy')
     {
     steps{
-    bat "copy SampleWeb.zip 'D:\Deploy\test' "
-   bat "cd 'D:\Deploy\test' tar.exe -xf SampleWeb.zip"
+    bat "copy SampleWeb.zip 'D:\\Deploy\\test' "
+   bat "cd 'D:\\Deploy\\test' tar.exe -xf SampleWeb.zip"
 }
 }
     
