--- a/SampleWeb/jenkinsfile
+++ b/SampleWeb/jenkinsfile
@@ -51,7 +51,7 @@ pipeline {
     stage ('Deploy')
     {
     steps{
-    bat "copy SampleWeb.zip 'D:\\Deploy\\test' "
+    bat "copy SampleWeb.zip D:\\Deploy\\test "
    bat "cd 'D:\\Deploy\\test' tar.exe -xf SampleWeb.zip"
 }
 }
