--- a/SampleWeb/jenkinsfile
+++ b/SampleWeb/jenkinsfile
@@ -52,7 +52,7 @@ pipeline {
     {
     steps{
     bat "copy SampleWeb.zip D:\\Deploy\\test "
-   bat "dir D:\\Deploy\\test tar.exe -xf SampleWeb.zip"
+   bat "D: cd Deploy\\test tar.exe -xf SampleWeb.zip"
 }
 }
     
