--- a/SampleWeb/jenkinsfile
+++ b/SampleWeb/jenkinsfile
@@ -52,8 +52,8 @@ pipeline {
     {
     steps{
     bat "copy SampleWeb.zip D:\\Deploy\\test "
-   bat "D: cd Deploy\\test tar.exe -xf SampleWeb.zip"
-   powershell " Expand-Archive -LiteralPath . -DestinationPath . "
+   
+   powershell " Expand-Archive D:\\Deploy\\test\\SampleWeb.zip -LiteralPath  -DestinationPath D:\\Deploy\\test "
 }
 }
     
