--- a/SampleWeb/jenkinsfile
+++ b/SampleWeb/jenkinsfile
@@ -51,9 +51,10 @@ pipeline {
     stage ('Deploy')
     {
     steps{
+    bat "del *.zip"
     bat "copy SampleWeb.zip D:\\Deploy\\test "
    
-   powershell " Expand-Archive  -LiteralPath D:\\Deploy\\test\\SampleWeb.zip -DestinationPath D:\\Deploy\\test "
+   powershell " Remove-Item D:\\Deploy\\test SampleWeb Expand-Archive  -LiteralPath D:\\Deploy\\test\\SampleWeb.zip -DestinationPath D:\\Deploy\\test "
 }
 }
     
