--- a/SampleWeb/jenkinsfile
+++ b/SampleWeb/jenkinsfile
@@ -54,7 +54,8 @@ pipeline {
     bat "D: cd D:\\Deploy\\test del *.zip"
     bat "copy SampleWeb.zip D:\\Deploy\\test "
    
-   powershell " Remove-Item -LiteralPath D:\\Deploy\\test\\SampleWeb -Force -Recurse  Expand-Archive  -LiteralPath D:\\Deploy\\test\\SampleWeb.zip -DestinationPath D:\\Deploy\\test "
+   powershell """ Remove-Item -LiteralPath D:\\Deploy\\test\\SampleWeb -Force -Recurse  
+   Expand-Archive  -LiteralPath D:\\Deploy\\test\\SampleWeb.zip -DestinationPath D:\\Deploy\\test """
 }
 }
     
