--- a/SampleWeb/jenkinsfile
+++ b/SampleWeb/jenkinsfile
@@ -55,7 +55,29 @@ pipeline {
     bat "copy SampleWeb.zip D:\\Deploy\\test "
    
    powershell """ Remove-Item -LiteralPath D:\\Deploy\\test\\SampleWeb -Force -Recurse  
-   Expand-Archive  -LiteralPath D:\\Deploy\\test\\SampleWeb.zip -DestinationPath D:\\Deploy\\test """
+   Expand-Archive  -LiteralPath D:\\Deploy\\test\\SampleWeb.zip -DestinationPath D:\\Deploy\\test
+   
+   Import-Module  WebAdministration
+
+
+$filepath ="D:\\Deploy\\test\\SampleWeb"
+$websiteurl= "dotnetcoredeploy.com.com"
+$websitename= "dotnetcoredeploy"
+
+New-WebAppPool -Name $websitename -Force
+
+New-Website -Name $websitename -Port 82 -IPAddress * -HostHeader $websiteurl -PhysicalPath $filepath -ApplicationPool $websitename -Force
+
+New-WebBinding -Name "$websitename" -IPAddress "*" -Port 82 -Protocol http
+
+Set-ItemProperty IIS:\AppPools\$websiteName -Name managedRuntimeVersion -Value "v4.0"
+
+   
+   
+   
+   
+   
+   """
 }
 }
     
