--- a/SampleWeb/jenkinsfile
+++ b/SampleWeb/jenkinsfile
@@ -64,9 +64,10 @@ pipeline {
 
                       New-WebAppPool -Name dotnetcoredeploy -Force
 
-                      New-Website -Name dotnetcoredeploy -Port 82 -IPAddress * -HostHeader dotnetcoredeploy.com -PhysicalPath D:\\Deploy\\test\\SampleWeb -ApplicationPool dotnetcoredeploy -Force
+                      New-Website -Name dotnetcoredeploy -Port 82 -IPAddress * -HostHeader dotnetcoredeploy.com -PhysicalPath D:\\Deploy\\test\\SampleWeb\\bin\\Debug\\netcoreapp3.1\\publish -ApplicationPool dotnetcoredeploy -Force
 
                       New-WebBinding -Name dotnetcoredeploy -IPAddress "*" -Port 82 -Protocol http
+                      
                        """
          }
     }
