--- a/SampleWeb/jenkinsfile
+++ b/SampleWeb/jenkinsfile
@@ -63,9 +63,9 @@ pipeline {
                       Remove-WebAppPool -Name dotnetcoredeploy
 
                       
-		      $weburl=dotnetcoredeploy.com
-		$websitename=dotnetcoredeploy
-		      $filepath=D:\\Deploy\\test\\SampleWeb\\bin\\Debug\\netcoreapp3.1\\publish
+		      $weburl='dotnetcoredeploy.com'
+		$websitename='dotnetcoredeploy'
+		      $filepath='D:\\Deploy\\test\\SampleWeb\\bin\\Debug\\netcoreapp3.1\\publish'
 		
 
                       New-WebAppPool -Name $websitename -Force
