--- a/SampleWeb/jenkinsfile
+++ b/SampleWeb/jenkinsfile
@@ -62,10 +62,8 @@ pipeline {
                       Remove-WebSite -Name dotnetcoredeploy
                       Remove-WebAppPool -Name dotnetcoredeploy
 
-                      
-		      $weburl='dotnetcoredeploy.com'
-		$websitename='dotnetcoredeploy'
-		      $filepath='D:\\Deploy\\test\\SampleWeb\\bin\\Debug\\netcoreapp3.1\\publish'
+                   
+$output= Get-content SampleWeb\\jenkinsvariable| ConvertFrom-StringData
 		
 
                       New-WebAppPool -Name $websitename -Force
