--- a/SampleWeb/jenkinsfile
+++ b/SampleWeb/jenkinsfile
@@ -65,7 +65,7 @@ pipeline {
       powershell """ Remove-Item -LiteralPath D:\\Deploy\\test\\SampleWeb -Force -Recurse  
                       Expand-Archive  -LiteralPath D:\\Deploy\\test\\SampleWeb.zip -DestinationPath D:\\Deploy\\test
    
-                     $ENV_TYPE = "dev"
+                     ${ENV_TYPE} = "dev"
 
 			$mypath = "SampleWeb"
 
@@ -82,11 +82,11 @@ pipeline {
                       Remove-WebSite -Name dotnetcoredeploy
                       Remove-WebAppPool -Name dotnetcoredeploy
 
-         		 New-WebAppPool -Name $output.websitename -Force
+         		 New-WebAppPool -Name ${output}.websitename -Force
 
-                      New-Website -Name $properties.websitename -Port 82 -IPAddress * -HostHeader $properties.weburl -PhysicalPath  $properties.filepath -ApplicationPool $properties.websitename  -Force
+                      New-Website -Name ${properties}.websitename -Port 82 -IPAddress * -HostHeader ${properties}.weburl -PhysicalPath  ${properties}.filepath -ApplicationPool ${properties}.websitename  -Force
 
-                      New-WebBinding -Name $properties.websitename -IPAddress "*" -Port 82 -Protocol http
+                      New-WebBinding -Name ${properties}.websitename -IPAddress "*" -Port 82 -Protocol http
                       
                        """
 		       }
