--- a/SampleWeb/jenkinsfile
+++ b/SampleWeb/jenkinsfile
@@ -65,7 +65,7 @@ pipeline {
       powershell """ Remove-Item -LiteralPath D:\\Deploy\\test\\SampleWeb -Force -Recurse  
                       Expand-Archive  -LiteralPath D:\\Deploy\\test\\SampleWeb.zip -DestinationPath D:\\Deploy\\test
    
-                     ${ENV_TYPE} = "dev"
+                     $ENV_TYPE = "dev"
 
 			$mypath = "SampleWeb"
 
